--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ nav:
           - 考试和竞赛: 04-study/study.md
       - 生活:
           - 生活实用小技巧: 05-common-sense-of-life/common-sense-of-life.md
+          - 保健手段: 05-common-sense-of-life/health.md
       - 就业:
           - 企业文化: 06-recruit-exercitation/recruit-exercitation.md
       - 方法论:
